--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1,4 +1,3 @@
-
 /* HTML & BODY 
 ***************************************************************/
 
@@ -442,9 +441,10 @@ top:-2px;
 .releases_discography_number_default 
 {
 background-image:url(../pics/releases/img-release-default.png);
-height:290px;
+height:282px;
 width:220px;
-margin-left:15px;
+top:11px;
+margin-left:10px;
 }
 
 .releases_discography_number
