--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -357,12 +357,13 @@ margin-top:100px;}
   font-size:10px;
   font-size:1em;
   text-transform:none;
+  opacity:.0.7;
 }
 
 .header_news_2 a:hover
 {
-  color:#b2b2b2;
-
+  color:#29ABE2;
+  opacity:1;
 }
 .header_news_2_nav
 {
