--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -357,7 +357,7 @@ margin-top:100px;}
   font-size:10px;
   font-size:1em;
   text-transform:none;
-  opacity:.0.7;
+  opacity:0.7;
 }
 
 .header_news_2 a:hover
