--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -328,17 +328,17 @@ margin-bottom:-20px;
 {
 color:#fff;
 font-weight:lighter;
-font-size:45px;
-font-size:4.5rem;
-}
+font-size:60px;
+font-size:6rem;
+opacity:0.9;}
 
 .header_news_1_content h2 a 
 {
 color:#ef001d;
 font-weight:lighter;
-font-size:38px;
-font-size:3.8rem
-}
+font-size:45px;
+font-size:4.5rem;
+opacity:0.9;}
 
 
 .header_news_2
