custom releases css

--- a/src/web/assets/releases/dhr-19/dhr-19.css
+++ b/src/web/assets/releases/dhr-19/dhr-19.css
@@ -26,7 +26,7 @@ opacity:0.9;}
 
 .header_news_1_content h2 a 
 {
-color:#000;
+color:#ef001d;
 font-weight:lighter;
 font-size:45px;
 font-size:4.5rem;
