reorganisation du menu + css

--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1009,6 +1009,11 @@ margin-left:-21px;
 {
 margin-left:10px;
 }
+
+.open_releases_infos_date 
+{
+
+}
 .open_releases_content,.open_artists_content 
 {
 padding-top:20px;
