--- a/src/web/assets/releases/dhr-23/dhr-23.css
+++ b/src/web/assets/releases/dhr-23/dhr-23.css
@@ -2,44 +2,44 @@
 .header_news_2_content {display: none;}
 
 
-.header_news_1_content,.header_news_2_content 
+.header_news_1_content,.header_news_2_content
 {
 font-family: 'Jockey One', sans-serif;
 text-align:right;
 }
 
-.header_news_1_content a:hover,.header_news_2_content a:hover  
+.header_news_1_content a:hover,.header_news_2_content a:hover
 {color:#FFF;opacity: 1;}
-.header_news_1_content a,.header_news_2_content a  
+.header_news_1_content a,.header_news_2_content a
 {
  text-decoration:none;
 }
 
-.header_news_1_content h1 
+.header_news_1_content h1
 {
 position: relative;
 top:40px;
 }
 
 
-.header_news_1_content h1 a 
+.header_news_1_content h1 a
 {
-color:#FFF;
+color:#fe005e;
 font-weight:lighter;
 font-size:50px;
 font-size:5rem;
 opacity:0.9;}
 
-.header_news_1_content h2 a 
+.header_news_1_content h2 a
 {
-color:#FFF;
+color:#f9ee43;
 font-weight:lighter;
-font-size:32px;
-font-size:3.2rem;
+font-size:40px;
+font-size:4rem;
 opacity:0.9;
 text-transform: capitalize;}
 
-.header_news_1_content h2 
+.header_news_1_content h2
 {
 position: relative;
 top:50px;
