--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1070,6 +1070,8 @@ margin-top:20px;
 margin-bottom: 30px;
 }
 
+h2.open_releases_title a {color: #ea1D78;}
+
 h3.open_releases_title 
 {
 margin-top:20px;
@@ -1536,4 +1538,3 @@ opacity:1;
 
 /* linkl temp*/
 
-.donate a {color: #ea1D78;}
